[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/items/shiny/2.png" type="Texture" id=1]
[ext_resource path="res://src/objects/item.gd" type="Script" id=2]
[ext_resource path="res://assets/items/explosion/Explosion_10.png" type="Texture" id=3]
[ext_resource path="res://assets/items/explosion/Explosion_1.png" type="Texture" id=4]
[ext_resource path="res://assets/items/explosion/Explosion_9.png" type="Texture" id=5]
[ext_resource path="res://assets/items/explosion/Explosion_2.png" type="Texture" id=6]
[ext_resource path="res://assets/items/explosion/Explosion_5.png" type="Texture" id=7]
[ext_resource path="res://assets/items/explosion/Explosion_6.png" type="Texture" id=8]
[ext_resource path="res://assets/items/explosion/Explosion_7.png" type="Texture" id=9]
[ext_resource path="res://assets/items/explosion/Explosion_8.png" type="Texture" id=10]
[ext_resource path="res://assets/items/explosion/Explosion_4.png" type="Texture" id=11]
[ext_resource path="res://assets/items/explosion/Explosion_3.png" type="Texture" id=12]
[ext_resource path="res://assets/items/explosion2/Explosion_3.png" type="Texture" id=13]
[ext_resource path="res://assets/items/explosion2/Explosion_4.png" type="Texture" id=14]
[ext_resource path="res://assets/items/explosion2/Explosion_1.png" type="Texture" id=15]
[ext_resource path="res://assets/items/explosion2/Explosion_2.png" type="Texture" id=16]
[ext_resource path="res://assets/items/explosion2/Explosion_10.png" type="Texture" id=17]
[ext_resource path="res://assets/items/explosion2/Explosion_5.png" type="Texture" id=18]
[ext_resource path="res://assets/items/explosion2/Explosion_7.png" type="Texture" id=19]
[ext_resource path="res://assets/items/explosion2/Explosion_8.png" type="Texture" id=20]
[ext_resource path="res://assets/items/explosion2/Explosion_6.png" type="Texture" id=21]
[ext_resource path="res://assets/items/explosion2/Explosion_9.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="CrystalItem" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="ItemSprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="RemoveItemSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ChangeItemSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 3 )

[connection signal="animation_finished" from="RemoveItemSprite" to="." method="_on_RemoveItemSprite_animation_finished"]
[connection signal="animation_finished" from="ChangeItemSprite" to="." method="_on_ChangeItemSprite_animation_finished"]
